--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ember-ajax": "0.7.1",
     "ember-cli": "2.5.1",
     "ember-cli-app-version": "^1.0.0",
+    "ember-cli-autoprefixer": "0.6.0",
     "ember-cli-babel": "^5.1.6",
     "ember-cli-dependency-checker": "^1.2.0",
     "ember-cli-htmlbars": "^1.0.3",
@@ -31,12 +32,17 @@
     "ember-cli-jshint": "^1.0.0",
     "ember-cli-qunit": "^1.4.0",
     "ember-cli-release": "0.2.8",
+    "ember-cli-sass": "5.3.1",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^1.2.0",
+    "ember-composability": "0.3.2",
+    "ember-cordova": "0.1.5",
     "ember-data": "^2.5.0",
     "ember-export-application-global": "^1.0.5",
     "ember-load-initializers": "^0.5.1",
+    "ember-new-computed": "1.0.3",
     "ember-resolver": "^2.0.3",
+    "ember-truth-helpers": "1.2.0",
     "loader.js": "^4.0.1"
   }
 }
