--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "ember-cordova": "0.1.5",
     "ember-data": "^2.5.0",
     "ember-export-application-global": "^1.0.5",
+    "ember-hammertime": "1.0.3",
     "ember-load-initializers": "^0.5.1",
     "ember-new-computed": "1.0.3",
     "ember-resolver": "^2.0.3",
